Added filter by earliestDestinationTime in frontend.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -54,7 +54,7 @@
 
                     <li class="nav-item authorized-button" data-toggle="modal" data-target="#search-trip-modal">
                         <a class="nav-link">
-                            Detail search trip
+                            Detailed search trip
                             <div class="ripple-container"></div>
                         </a>
                     </li>
@@ -280,7 +280,7 @@
                     </div>
                 </div>
 
-                                Destination
+                                <!--Destination-->
                 <div class="form-group bmd-form-group">
                     <label for="car_model"><h5>Destination</h5></label>
                     <div class="input-group">
@@ -291,14 +291,14 @@
                     </div>
                 </div>
 
-<!--                                Earliest Date and time input
+                                <!--Earliest Date and time input-->
                 <div class="form-group">
                     <label for="date_time" class="label-control">Earliest date and time</label>
-                    <input type="text" class="form-control datetimepicker" value="08/13/2019"
+                    <input type="text" class="form-control datetimepicker"
                            id="searchDateTimeEarliest"/>
                 </div>
 
-                                Allow latest date and time input
+                <!--                Allow latest date and time input
                 <div class="form-check">
                     <label class="form-check-label">
                         <input class="form-check-input" type="checkbox" id="showLatestDateForm">
@@ -307,16 +307,16 @@
                             <span class="check"></span>
                             </span>
                     </label>
-                </div>
+                </div>-->
 
                                 Latest Date and time input
                 <div class="form-group dateTimeLatest">
                     <label for="date_time" class="label-control">Latest date and time</label>
-                    <input type="text" class="form-control datetimepicker" value="08/13/2019"
+                    <input type="text" class="form-control datetimepicker"
                            id="searchDateTimeLatest"/>
                 </div>
 
-                &lt;!&ndash;                Available places&ndash;&gt;
+<!--                &lt;!&ndash;                Available places&ndash;&gt;
                 <div class="form-group bmd-form-group">
                     <label for="inputState">Available places</label>
                     <select id="searchAvailablePlaces" class="form-control">
