Added filter by latestDestinationTime in frontend.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -309,7 +309,7 @@
                     </label>
                 </div>-->
 
-                                Latest Date and time input
+                                <!--Latest Date and time input-->
                 <div class="form-group dateTimeLatest">
                     <label for="date_time" class="label-control">Latest date and time</label>
                     <input type="text" class="form-control datetimepicker"
