--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -328,48 +328,44 @@
                     </select>
                 </div>
 
-<!--                &lt;!&ndash;                ALLOW   &ndash;&gt;
+                <!--                ALLOW   -->
                 <div class="form-group bmd-form-group">
-                    &lt;!&ndash;                Allow pets&ndash;&gt;
-                    <div class="form-check">
-                        <label class="form-check-label">
-                            <input class="form-check-input" type="checkbox" id="searchIsAllowedPets">
-                            Allow pets
-                            <span class="form-check-sign">
-                            <span class="check"></span>
-                            </span>
-                        </label>
-                    </div>
-                    &lt;!&ndash;                Allow smoking&ndash;&gt;
-                    <div class="form-check">
-                        <label class="form-check-label">
-                            <input class="form-check-input" type="checkbox" id="searchIsAllowedSmoking">
-                            Allow smoking in car
-                            <span class="form-check-sign">
-                            <span class="check"></span>
-                            </span>
-                        </label>
-                    </div>
-                    &lt;!&ndash;                Allow luggage&ndash;&gt;
-                    <div class="form-check">
-                        <label class="form-check-label">
-                            <input class="form-check-input" type="checkbox" id="searchIsAllowedLuggage">
-                            Allow luggage
-                            <span class="form-check-sign">
-                            <span class="check"></span>
-                            </span>
-                        </label>
-                    </div>
+                    <!--                Allow pets-->
+                    <label for="inputState">Pets allowed</label>
+                    <select id="searchPetsAllowed" class="form-control">
+                        <option selected>Select option</option>
+                        <option>True</option>
+                        <option>False</option>
+                    </select>
+                </div>                 <!--Allow smoking-->
+                <div class="form-group bmd-form-group">
+                    <label for="inputState">Smoking allowed</label>
+                    <select id="searchSmokingAllowed" class="form-control">
+                        <option selected>Select option</option>
+                        <option>True</option>
+                        <option>False</option>
+                    </select>
+                </div>
+                <!--Allow luggage-->
+                <div class="form-group bmd-form-group">
+                    <label for="inputState">Luggage allowed</label>
+                    <select id="searchLuggageAllowed" class="form-control">
+                        <option selected>Select option</option>
+                        <option>True</option>
+                        <option>False</option>
+                    </select>
+                </div>
 
-                    &lt;!&ndash;                Sort parameters&ndash;&gt;
+                    <!--                Sort parameters-->
                     <div class="form-group bmd-form-group">
                         <label for="inputState">Sort by:</label>
                         <select id="searchSortByParameter" class="form-control">
-                            <option selected>Departure time</option>
+                            <option selected>Select option</option>
+                            <option>Departure time</option>
                             <option>Available places</option>
                             <option>Driver rating</option>
                         </select>
-                    </div>-->
+                    </div>
 
                 </div>
                 <div class="modal-footer">
@@ -382,7 +378,7 @@
     </div>
 </div>
 
-<div class="main main-raised">
+<div class="main main-raised" id="frontTrips">
     <div class="container">
         <div class="section text-center" style="margin-top: 100px">
             <h2 class="title">Trips</h2>
