--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -382,36 +382,27 @@
     <div class="container">
         <div class="section text-center" style="margin-top: 100px">
             <h2 class="title">Trips</h2>
-            <form style="margin-left: 260px" id="easySearch">
+            <form id="easySearch">
 
                 <div class="form-row align-items-left">
                     <!--                        ORIGIN              -->
-                    <div class="col-3">
-                        <label class="label-control" for="easyOriginSearch">Origin</label>
-                        <div class="input-group">
-                            <input type="text" class="form-control" id="easyOriginSearch" placeholder="From"
-                                   style="color: #000000;">
-                        </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="From..." id="searchOriginFront">
+                    </div>&nbsp&nbsp
+
+                    <!--Destination-->
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="To..." id="searchDestinationFront">
+                    </div>&nbsp&nbsp
+
+                    <!--Earliest Date and time input-->
+                    <div class="form-group">
+                        <input type="text" class="form-control datetimepicker" placeholder="Earliest departure time..."
+                               id="searchDateTimeEarliestFront"/>
                     </div>
 
-                    <!--                        DESTINATION         -->
-                    <div class="col-3">
-                        <label for="easyDestinationSearch">Destination</label>
-                        <div class="input-group">
-                            <input type="text" class="form-control" id="easyDestinationSearch" placeholder="To"
-                                   style="color: #000000;">
-                        </div>
-                    </div>
-
-                    <!--                        DATE AND TIME         -->
-                    <div class="form-group mb-0 mb-3">
-                        <label for="date_time" class="label-control">Earliest date and time</label>
-                        <input type="text" class="form-control datetimepicker" value="08/13/2019"
-                               id="easyDateTimeEarliest"/>
-                    </div>
-
-                    <div class="col-auto">
-                        <button type="button" class="btn btn-primary mb-2" onclick="shortSearchTrips()">Search
+                    <div class="col-auto" style="margin-left: 420px">
+                        <button type="button" class="btn btn-primary mb-2" onclick="loadTrips()">Search
                         </button>
                     </div>
 
