Added easy search in front-end.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -378,9 +378,9 @@
     </div>
 </div>
 
-<div class="main main-raised" id="frontTrips">
+<div class="main main-raised" id="frontTrips" style="margin-top: 100px">
     <div class="container">
-        <div class="section text-center" style="margin-top: 100px">
+        <div class="section text-center" style="margin-top: 50px">
             <h2 class="title">Trips</h2>
             <form id="easySearch">
 
@@ -401,7 +401,7 @@
                                id="searchDateTimeEarliestFront"/>
                     </div>
 
-                    <div class="col-auto" style="margin-left: 420px">
+                    <div class="col-auto" style="margin-left: 465px">
                         <button type="button" class="btn btn-primary mb-2" onclick="loadTrips()">Search
                         </button>
                     </div>
