--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -410,7 +410,7 @@
 
             </form>
             <div class="row" id="trip-body"></div>
-            <nav aria-label="Page navigation example">
+            <nav aria-label="Page navigation example" style="margin-left: 720px">
                 <ul class="pagination justify-content-center">
                     <li class="page-item disabled">
                         <a class="page-link" href="#" tabindex="-1">Previous</a>
