Updated easy search and full search in front end.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -370,7 +370,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="loadTrips()">Search
+                    <button type="button" class="btn btn-primary" data-dismiss="modal" id="fullSearchBtn" onclick="loadTrips()">Search
                     </button>
                 </div>
             </div>
@@ -402,7 +402,7 @@
                     </div>
 
                     <div class="col-auto" style="margin-left: 465px">
-                        <button type="button" class="btn btn-primary mb-2" onclick="loadTrips()">Search
+                        <button type="button" class="btn btn-primary mb-2" id="easySearchBtn" onclick="loadTrips()">Search
                         </button>
                     </div>
 
