--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -370,7 +370,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" data-dismiss="modal" id="fullSearchBtn" onclick="loadTrips()">Search
+                    <button type="button" class="btn btn-primary" data-dismiss="modal" id="fullSearchBtn">Search
                     </button>
                 </div>
             </div>
