--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -18,6 +18,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <link href="assets/css/main.css" rel="stylesheet"/>
+
+<!--    Swal fire   -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
+
 </head>
 
 <body>
@@ -52,14 +56,16 @@
                         </a>
                     </li>
 
-                    <li class="nav-item authorized-button" data-toggle="modal" data-target="#search-trip-modal" id="detailedSearchTrip">
+                    <li class="nav-item authorized-button" data-toggle="modal" data-target="#search-trip-modal"
+                        id="detailedSearchTrip">
                         <a class="nav-link">
                             Detailed search trip
                             <div class="ripple-container"></div>
                         </a>
                     </li>
 
-                    <li class="nav-item authorized-button" data-toggle="modal" data-target="#create-trip-modal" id="createTrip">
+                    <li class="nav-item authorized-button" data-toggle="modal" data-target="#create-trip-modal"
+                        id="createTrip">
                         <a class="nav-link">
                             Create Trip
                             <div class="ripple-container"></div>
@@ -88,7 +94,6 @@
 <!--    upperPart   -->
 <!--    easySearch  -->
 <!--    top-drivers -->
-
 
 <!--                            Upper part                         -->
 
@@ -156,7 +161,7 @@
 
                 <!--                Origin input-->
                 <div class="form-group bmd-form-group">
-                    <label for="car_model"><h5>Origin</h5></label>
+                    <label for="car_model"><h5>Origin*</h5></label>
                     <div class="input-group">
                         <div class="input-group-prepend">
                             <div class="input-group-text"><i class="material-icons">car</i></div>
@@ -167,7 +172,7 @@
 
                 <!--                Destination input-->
                 <div class="form-group bmd-form-group">
-                    <label for="car_model"><h5>Destination</h5></label>
+                    <label for="car_model"><h5>Destination*</h5></label>
                     <div class="input-group">
                         <div class="input-group-prepend">
                             <div class="input-group-text"><i class="material-icons">car</i></div>
@@ -178,7 +183,7 @@
 
                 <!--                Car input-->
                 <div class="form-group bmd-form-group">
-                    <label for="car_model"><h5>Car model</h5></label>
+                    <label for="car_model"><h5>Car model*</h5></label>
                     <div class="input-group">
                         <div class="input-group-prepend">
                             <div class="input-group-text"><i class="material-icons">car</i></div>
@@ -189,7 +194,7 @@
 
                 <!--                Date and time input-->
                 <div class="form-group">
-                    <label for="date_time" class="label-control">Date and time</label>
+                    <label for="date_time" class="label-control">Date and time*</label>
                     <input type="text" class="form-control datetimepicker" value="08/01/2019" id="date_time"/>
                 </div>
 
@@ -201,7 +206,7 @@
                 </div>
 
                 <div class="form-group bmd-form-group">
-                    <label for="inputState">Available places</label>
+                    <label for="inputState">Available places*</label>
                     <select id="inputState" class="form-control">
                         <option selected>1</option>
                         <option>2</option>
@@ -280,7 +285,7 @@
                     </div>
                 </div>
 
-                                <!--Destination-->
+                <!--Destination-->
                 <div class="form-group bmd-form-group">
                     <label for="car_model"><h5>Destination</h5></label>
                     <div class="input-group">
@@ -291,25 +296,14 @@
                     </div>
                 </div>
 
-                                <!--Earliest Date and time input-->
+                <!--Earliest Date and time input-->
                 <div class="form-group">
                     <label for="date_time" class="label-control">Earliest date and time</label>
                     <input type="text" class="form-control datetimepicker"
                            id="searchDateTimeEarliest"/>
                 </div>
 
-                <!--                Allow latest date and time input
-                <div class="form-check">
-                    <label class="form-check-label">
-                        <input class="form-check-input" type="checkbox" id="showLatestDateForm">
-                        Add latest date and time
-                        <span class="form-check-sign">
-                            <span class="check"></span>
-                            </span>
-                    </label>
-                </div>-->
-
-                                <!--Latest Date and time input-->
+                <!--Latest Date and time input-->
                 <div class="form-group dateTimeLatest">
                     <label for="date_time" class="label-control">Latest date and time</label>
                     <input type="text" class="form-control datetimepicker"
@@ -356,26 +350,26 @@
                     </select>
                 </div>
 
-                    <!--                Sort parameters-->
-                    <div class="form-group bmd-form-group">
-                        <label for="inputState">Sort by:</label>
-                        <select id="searchSortByParameter" class="form-control">
-                            <option selected>Select option</option>
-                            <option>Departure time</option>
-                            <option>Available places</option>
-                            <option>Driver rating</option>
-                        </select>
-                    </div>
+                <!--                Sort parameters-->
+                <div class="form-group bmd-form-group">
+                    <label for="inputState">Sort by:</label>
+                    <select id="searchSortByParameter" class="form-control">
+                        <option selected>Select option</option>
+                        <option>Departure time</option>
+                        <option>Available places</option>
+                        <option>Driver rating</option>
+                    </select>
+                </div>
 
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" data-dismiss="modal" id="fullSearchBtn">Search
-                    </button>
-                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal" id="fullSearchBtn">Search
+                </button>
             </div>
         </div>
     </div>
+</div>
 </div>
 
 <div class="main main-raised" id="frontTrips" style="margin-top: 100px">
@@ -388,12 +382,14 @@
                     <!--                        ORIGIN              -->
                     <div class="form-group">
                         <input type="text" class="form-control" placeholder="From..." id="searchOriginFront">
-                    </div>&nbsp&nbsp
+                    </div>
+                    &nbsp&nbsp
 
                     <!--Destination-->
                     <div class="form-group">
                         <input type="text" class="form-control" placeholder="To..." id="searchDestinationFront">
-                    </div>&nbsp&nbsp
+                    </div>
+                    &nbsp&nbsp
 
                     <!--Earliest Date and time input-->
                     <div class="form-group">
@@ -402,7 +398,8 @@
                     </div>
 
                     <div class="col-auto" style="margin-left: 465px">
-                        <button type="button" class="btn btn-primary mb-2" id="easySearchBtn" onclick="loadTrips()">Search
+                        <button type="button" class="btn btn-primary mb-2" id="easySearchBtn" onclick="loadTrips()">
+                            Search
                         </button>
                     </div>
 
@@ -457,6 +454,11 @@
     </div>
 </div>
 
+<!--                HEADER MESSAGE  -->
+
+    <div class="alert-success" id="message" style="text-align: center; margin-top: 150px; background-color: palegreen"></div></h2>
+
+<!--                Content-->
 <div id="content"></div>
 
 <!--                FOOTER-->
