Fixed top ten drivers.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -238,7 +238,7 @@
                         </label>
                     </div>
                     <!--                Allow luggage-->
-                    <div class="form-check">
+                    <div class="form-check" id="errorCreateTrip">
                         <label class="form-check-label">
                             <input class="form-check-input" type="checkbox" id="allow_luggage">
                             Allow luggage
